--- a/WorkingTimeEmployees.Test/WorkingTimeEmployees.Test.csproj
+++ b/WorkingTimeEmployees.Test/WorkingTimeEmployees.Test.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WorkingTimeEmployees.Functions\WorkingTimeEmployees.Functions.csproj" />
+  </ItemGroup>
+
 </Project>
